<resources>
    <string name="app_name">LinkageRecyclerView</string>
    <string name="operators_json">
        "[{\"header\":\"Creating\",\"isHeader\":true},{\"isHeader\":false,\"info\":{\"content\":\"Complex data traversal\",\"group\":\"Creating\",\"title\":\"just\"}},{\"isHeader\":false,\"info\":{\"content\":\"Complex data traversal\",\"group\":\"Creating\",\"title\":\"fromArray\"}},{\"isHeader\":false,\"info\":{\"content\":\"Complex data traversal\",\"group\":\"Creating\",\"title\":\"fromIterable\"}},{\"isHeader\":false,\"info\":{\"content\":\"Timed task\",\"group\":\"Creating\",\"title\":\"interval\"}},{\"isHeader\":false,\"info\":{\"content\":\"Timed task\",\"group\":\"Creating\",\"title\":\"intervalRange\"}},{\"isHeader\":false,\"info\":{\"content\":\"Nested callback asynchronous event\",\"group\":\"Creating\",\"title\":\"create\"}},{\"isHeader\":false,\"info\":{\"content\":\"Delayed task\",\"group\":\"Creating\",\"title\":\"defer\"}},{\"isHeader\":false,\"info\":{\"content\":\"Delayed task\",\"group\":\"Creating\",\"title\":\"timer\"}},{\"header\":\"Transforming\",\"isHeader\":true},{\"isHeader\":false,\"info\":{\"content\":\"Transformation\",\"group\":\"Transforming\",\"title\":\"map\"}},{\"isHeader\":false,\"info\":{\"content\":\"Transformation\",\"group\":\"Transforming\",\"title\":\"flatMap\"}},{\"isHeader\":false,\"info\":{\"content\":\"Transformation\",\"group\":\"Transforming\",\"title\":\"concatMap\"}},{\"header\":\"Combining\",\"isHeader\":true},{\"isHeader\":false,\"info\":{\"content\":\"Combine multiple observers, and merge events\",\"group\":\"Combining\",\"title\":\"concatArray\"}},{\"isHeader\":false,\"info\":{\"content\":\"Combine multiple observers, and merge events\",\"group\":\"Combining\",\"title\":\"concatDelayError\"}},{\"isHeader\":false,\"info\":{\"content\":\"Combine multiple observers, and merge events\",\"group\":\"Combining\",\"title\":\"megerArray\"}},{\"isHeader\":false,\"info\":{\"content\":\"Combine multiple observers, and merge events\",\"group\":\"Combining\",\"title\":\"megerArrayDelayError\"}},{\"isHeader\":false,\"info\":{\"content\":\"Combine multiple observers and merge them into one observer\",\"group\":\"Combining\",\"title\":\"zip\"}},{\"isHeader\":false,\"info\":{\"content\":\"Combine multiple observers and merge them into one observer\",\"group\":\"Combining\",\"title\":\"combineLatest\"}},{\"isHeader\":false,\"info\":{\"content\":\"Append other events before sending the event\",\"group\":\"Combining\",\"title\":\"startWithArray\"}},{\"isHeader\":false,\"info\":{\"content\":\"Combine multiple events into one event\",\"group\":\"Combining\",\"title\":\"reduce\"}},{\"isHeader\":false,\"info\":{\"content\":\"Combine multiple events into one event\",\"group\":\"Combining\",\"title\":\"collect\"}},{\"isHeader\":false,\"info\":{\"content\":\"Summarize the number of events sent\",\"group\":\"Combining\",\"title\":\"count\"}},{\"header\":\"Filtering\",\"isHeader\":true},{\"isHeader\":false,\"info\":{\"content\":\"Specify filter criteria to filter the required events or data\",\"group\":\"Filtering\",\"title\":\"filter\"}},{\"isHeader\":false,\"info\":{\"content\":\"Filter specified types of events or data\",\"group\":\"Filtering\",\"title\":\"ofType\"}},{\"isHeader\":false,\"info\":{\"content\":\"Events or data with unsatisfied filter conditions\",\"group\":\"Filtering\",\"title\":\"skip\"}},{\"isHeader\":false,\"info\":{\"content\":\"Filter duplicate events or data\",\"group\":\"Filtering\",\"title\":\"distinct\"}},{\"isHeader\":false,\"info\":{\"content\":\"Filter duplicate events or data\",\"group\":\"Filtering\",\"title\":\"distinctUntilChanged\"}},{\"isHeader\":false,\"info\":{\"content\":\"Filter events or data by time or amount\",\"group\":\"Filtering\",\"title\":\"take\"}},{\"isHeader\":false,\"info\":{\"content\":\"Filter events at the specified location\",\"group\":\"Filtering\",\"title\":\"elementAt\"}},{\"isHeader\":false,\"info\":{\"content\":\"Filter events by time period\",\"group\":\"Filtering\",\"title\":\"throttleFirst\"}},{\"isHeader\":false,\"info\":{\"content\":\"Filter events by time period\",\"group\":\"Filtering\",\"title\":\"throttleLast\"}},{\"header\":\"Conditional\",\"isHeader\":true},{\"isHeader\":false,\"info\":{\"content\":\"Determine if all events are met\",\"group\":\"Conditional\",\"title\":\"all\"}},{\"isHeader\":false,\"info\":{\"content\":\"When the sent event judgment condition is not satisfied, the subsequent event reception will be terminated.\",\"group\":\"Conditional\",\"title\":\"takeWhile\"}},{\"isHeader\":false,\"info\":{\"content\":\"Receive subsequent events when the sent event judgment condition is not met\",\"group\":\"Conditional\",\"title\":\"skipWhile\"}},{\"isHeader\":false,\"info\":{\"content\":\"Same as filter\",\"group\":\"Conditional\",\"title\":\"takeUntil\"}},{\"isHeader\":false,\"info\":{\"content\":\"Receive events other than the judgment condition\",\"group\":\"Conditional\",\"title\":\"skipUntil\"}},{\"isHeader\":false,\"info\":{\"content\":\"Determine if the events sent by the two observers are the same\",\"group\":\"Conditional\",\"title\":\"sequenceEqual\"}},{\"isHeader\":false,\"info\":{\"content\":\"Determine whether the specified data contains the specified data.\",\"group\":\"Conditional\",\"title\":\"contains\"}},{\"isHeader\":false,\"info\":{\"content\":\"Determine if the sent data is empty\",\"group\":\"Conditional\",\"title\":\"isEmpty\"}},{\"isHeader\":false,\"info\":{\"content\":\"Multiple observers receive only the \\\"first observed observer who successfully sent data\\\"\",\"group\":\"Conditional\",\"title\":\"amb\"}},{\"header\":\"Blocking\",\"isHeader\":true},{\"isHeader\":false,\"info\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doOnEach\"}},{\"isHeader\":false,\"info\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doOnSubscribe\"}},{\"isHeader\":false,\"info\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doOnNext\"}},{\"isHeader\":false,\"info\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doAfterNext\"}},{\"isHeader\":false,\"info\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doOnComplete\"}},{\"isHeader\":false,\"info\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doOnError\"}},{\"isHeader\":false,\"info\":{\"content\":\"Error or exception handling: catch exceptions and feedback special results, normal termination\",\"group\":\"Blocking\",\"title\":\"onErrorReturn\"}},{\"isHeader\":false,\"info\":{\"content\":\"Error or exception handling: catch exception and return a new event\",\"group\":\"Blocking\",\"title\":\"onErrorResumeNext\"}},{\"isHeader\":false,\"info\":{\"content\":\"Error or exception handling: exception retry\",\"group\":\"Blocking\",\"title\":\"retry\"}},{\"isHeader\":false,\"info\":{\"content\":\"Event retransmission\",\"group\":\"Blocking\",\"title\":\"repeat\"}},{\"isHeader\":false,\"info\":{\"content\":\"Event retransmission\",\"group\":\"Blocking\",\"title\":\"repeatWhen\"}},{\"isHeader\":false,\"info\":{\"content\":\"Event retransmission\",\"group\":\"Blocking\",\"title\":\"repeatUntil\"}},{\"isHeader\":false,\"info\":{\"content\":\"Delay sending an observer's event\",\"group\":\"Blocking\",\"title\":\"delay\"}},{\"isHeader\":false,\"info\":{\"content\":\"Send event timeout processing\",\"group\":\"Blocking\",\"title\":\"timeout\"}}]"
    </string>
    <string name="hint_cola">cola</string>
    <string name="hint_price">¥18.8</string>
    <string name="hint_good_detail">好吃的食物，增肥神器，有求必应</string>
    <string name="hint_good_detail_gird">爆款</string>
    <string name="hint_good_comment">月售10008 好评率100%</string>
</resources>